--- a/index.html
+++ b/index.html
@@ -15,9 +15,27 @@
 
 </head>
 <body>
-    
 
+    <img id="top-img" src="images/top-image.svg" alt="">
+    <main>
+        <h2>READY TO LAUNCH IN...</h2>
 
+        <div id="countdown-container">    
+            <div id="countdown-labels">
+                <span>Dias</span>
+                <span>Horas</span>
+                <span>Minutos</span>
+                <span>Segundos</span>
+            </div>
+            <time id="countdown-time">30 : 12 : 59 : 59</time>
+        </div>
+
+        <p>Inscreva-se para saber mais sobre o lançamento</p>
+        <button id="subscribe-button">Inscreva-se</button>
+
+    </main>
+    <img id="rocket-img" src="images/rocket.svg" alt="">
+    <img id="bottom-img" src="images/bottom-image.svg" alt="">
 
 
     <script src="main.js"></script>
