--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Poppins from google fonts-->
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -20,7 +21,7 @@
     <main>
         <h2>READY TO LAUNCH IN...</h2>
         
-        <div id="countdown-time">
+        <div id="countdown-container">
             <span class="number-container">
                 <span class="countdown-label">Dias</span>
                 <span id="days-number">99</span>
@@ -54,7 +55,11 @@
         <button id="subscribe-button">Inscreva-se</button>
 
     </main>
-    <img id="rocket-img" src="images/rocket.svg" alt="">
+    
+    <div id="rocket-img-container">
+        <img id="rocket-img" src="images/rocket.svg" alt="">
+    </div>
+
     <img id="bottom-img" src="images/bottom-image.svg" alt="">
 
 
