--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="countdown-container">
             <span class="number-container">
                 <span class="countdown-label">Dias</span>
-                <span class="number" id="days-number">99</span>
+                <span id="days-number">99</span>
             </span>
 
             :
